# gh-issue-creator

./: Cargo.toml  README.md  tasks.json
.github/workflows/: build.yml  rust.yml
src/: config.rs  description.rs  file_handler.rs  github.rs  issue_creator.rs  main.rs
